assets/snake.css
/*RESET*/

html, body, ul, li {
  margin: 0;
  padding: 0;
  border: 0;
  font: inherit;
  color: inherit;
  background: transparent;
}

li{
  list-style: none;
}

/*CLEARFIX*/

.group:after{
  display: block;
  content: "";
  clear: both;
}

/*GAME*/

.gametitle{
  margin: 0 auto;
  font-family: sans-serif;
  font-size: 36px;
  width: 100px;
  padding: 5px 0;
}

.board {
  display: block;
  position: relative;
  width: 600px;
  margin: 0 auto;
  border: 5px solid black;
}

.board > li {
  width: 30px;
  height: 30px;
  float: left;
}

.snake {
  background: green;
}

.apple {
  background: red;
}

.gameover {
  display: block;
  position: absolute;
  top: 50px;
  left: 40px;
  font-family: sans-serif;
  font-size: 100px;
  color: black;
}

.score{
  display: block;
  position: absolute;
  top: 10px;
  right: 40px;
  margin: 0;
  font-family: sans-serif;
  font-size: 30px;
  color: black;
}

.buttons{
  position: absolute;
  top: 250px;
  left: 48px;
}

.buttons > *{
  float: left;
  font-size: 30px;
  color: white;
  padding: 5px 10px;
  margin: 0 10px;
  font-family: sans-serif;
  border: 2px solid black;
  border-radius: 10px;
  cursor: pointer;
}

.buttons > *:active{
  position: relative;
  top: 3px;
}

.easy{
  background-color: #0c0;
}

.easy:hover{
  background: #0b0;
}

.med{
  background-color: #4D94FF;
}

.med:hover{
  background-color: #4585E6;
}

.hard{
  background-color: #CC0000;
}

.hard:hover{
  background-color: #B80000;
}
.insane{
  background-color: #560000;
}

.insane:hover{
  background-color: #4D0000;
}

